--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://aqueous-depths-38272.herokuapp.com/",
+  "homepage": "https://giuliacajati.github.io/Bon-Appetit-Front-End/",
   "name": "bon-appetit",
   "version": "0.1.0",
   "private": true,
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "@iconify-icons/mdi": "^1.0.20",
-    "@iconify/react": "^1.1.3"
+    "@iconify/react": "^1.1.3",
+    "gh-pages": "^3.1.0"
   }
 }
