--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify/icons-mdi": "^1.1.1",
+    "@iconify/react": "^1.1.3",
     "gh-pages": "^3.1.0"
   }
 }
