change to homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://GiuliaCajati.github.io/bon-appetit-front-end/",
+  "homepage": "https://giuliacajati.github.io/",
   "name": "bon-appetit",
   "version": "0.1.0",
   "private": true,
