--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^12.1.10",
     "activestorage": "^5.2.4-4",
     "classnames": "^2.2.6",
+    "firebase-admin": "^5.12.1",
+    "firebase-functions": "^3.13.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-map": "^3.1.1",
@@ -21,7 +23,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
