--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/mdi": "^1.1.7",
     "@iconify/icons-mdi": "^1.1.1",
     "@iconify/react": "^1.1.3",
     "gh-pages": "^3.1.0"
